Amélioration du site

--- a/apropos.html
+++ b/apropos.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <header class="header">
-            <a href="index.html"><img src="images/logo.jpg" alt="logo" style="height: 65px" ; width="115px"></a>
+            <a href="index.html"><img src="images/logoo.png" alt="logo" style="height: 65px" ; width="115px"></a>
            <nav>
     <ul class="menu">
          <li class="dropdown">
@@ -24,17 +24,17 @@
         <li class="dropdown">
             <a href="apropos.html">A propos</a>
             <ul class="submenu">
-                <li><a href="#">Membre 1</a></li>
-                <li><a href="#">Membre 2</a></li>
-                <li><a href="#">Membre 3</a></li>
+                <li><a href="#">PDG</a></li>
+                <li><a href="#">DG</a></li>
+                <li><a href="#">L'équipe</a></li>
             </ul>
         </li>
         <li class="dropdown">
             <a href="services.html">Services</a>
             <ul class="submenu">
-                <li><a href="#">Service 1</a></li>
-                <li><a href="#">Service 2</a></li>
-                <li><a href="#">Service 3</a></li>
+                <li><a href="#">Santé</a></li>
+                <li><a href="#">Sécurité</a></li>
+                <li><a href="#">Assurances</a></li>
             </ul>
         </li>
          <li class="dropdown">
@@ -42,57 +42,62 @@
             <ul class="submenu">
                 <li><a href="#">+224 11 11</a></li>
                 <li><a href="#">+223 22 22</a></li>
-                <li><a href="#">+221 33 33 33</a></li>
+                <li><a href="#">+221 33 33</a></li>
             </ul>
         </li>
     </ul>
+    <form class="search-bar" action="#" method="get">
+        <input type="text" name="q" placeholder="Rechercher...">
+        <button type="submit">🔍</button>
+    </form>
+    <select class="lang-switcher">
+    <option value="fr">Fr</option>
+    <option value="en">En</option>
+    <option value="es">Es</option>
+</select>
 </nav>
         </header>
-        <!-- <section class="slider">
-            <div class="slides">
-                <img src="images/3.jpg" alt="images-1">
-                <img src="images/4.jpg" alt="images-2">
-                <img src="images/5.jpg" alt="">
-            </div>
-        </section> -->
     </div>
-        <main>
-            <div>
-                <div>
-            <div>
-                <main class="main">
-           <div class="arcticle">
-            <article>
-                <img src="images/drapeau.jpg" alt="profil" style="height: 75px" ; width="125px" ; border-radius="25px">
-                <h2>Les chemins de la guinée</h2>
-                <p>Situé à l’extrême Ouest de l’Afrique, la République de Guinée s’étend sur une superficie de 245 857 km2. Son territoire est limité par l’Océan Atlantique à l’ouest,<br> la Guinée Bissau au nord-ouest, le Sénégal et le Mali au nord, la Côte d’Ivoire à l’est, le Libéria et la Sierra Léone au sud. Nature, culture,<br> diversité et philosophies authentiques fondent la Guinée. Quatre (4) mondes y sont réunis, <br>à travers ses quatre (4) régions naturelles ; auxquelles correspondent des types de reliefs, de climats, de faunes et de flores bien distincts. <br> Elle apparaît comme une synthèse touristique de l’Afrique de l’Ouest : <br>Les 300 km de littoral parsemé des Archipels des Îles de Loos, d’Alcatraz, <br> de Tristao et de M’Botini ; couvert de mangroves, s’ouvre à la mer par de merveilleuses plages de sables fins <br> et de coquillages, ainsi que par des immenses estuaires de cours d’eaux. Ils confèrent une beauté singulière à la Basse Guinée.</p>
-            </article>
-           </div>
-           <div class="arcticle">
-            <article>
-                  <img src="images/3.jpg" alt="profil" style="height: 75px" ; width="125px" ; border-radius="25px">
-                <h2>Les chemins de la guinée</h2>
-                <p>Situé à l’extrême Ouest de l’Afrique, la République de Guinée s’étend sur une superficie de 245 857 km2. Son territoire est limité par l’Océan Atlantique à l’ouest,<br> la Guinée Bissau au nord-ouest, le Sénégal et le Mali au nord, la Côte d’Ivoire à l’est, le Libéria et la Sierra Léone au sud. Nature, culture,<br> diversité et philosophies authentiques fondent la Guinée. Quatre (4) mondes y sont réunis, <br>à travers ses quatre (4) régions naturelles ; auxquelles correspondent des types de reliefs, de climats, de faunes et de flores bien distincts. <br> Elle apparaît comme une synthèse touristique de l’Afrique de l’Ouest : <br>Les 300 km de littoral parsemé des Archipels des Îles de Loos, d’Alcatraz, <br> de Tristao et de M’Botini ; couvert de mangroves, s’ouvre à la mer par de merveilleuses plages de sables fins <br> et de coquillages, ainsi que par des immenses estuaires de cours d’eaux. Ils confèrent une beauté singulière à la Basse Guinée.</p>
-            </article>
-           </div>
-           <div class="arcticle">
-            <article>
-                   <img src="images/2.jpg" alt="profil" style="height: 75px" ; width="125px" ; border-radius="25px">
-                <h2>Les chemins de la guinée</h2>
-                <p>Situé à l’extrême Ouest de l’Afrique, la République de Guinée s’étend sur une superficie de 245 857 km2. Son territoire est limité par l’Océan Atlantique à l’ouest,<br> la Guinée Bissau au nord-ouest, le Sénégal et le Mali au nord, la Côte d’Ivoire à l’est, le Libéria et la Sierra Léone au sud. Nature, culture,<br> diversité et philosophies authentiques fondent la Guinée. Quatre (4) mondes y sont réunis, <br>à travers ses quatre (4) régions naturelles ; auxquelles correspondent des types de reliefs, de climats, de faunes et de flores bien distincts. <br> Elle apparaît comme une synthèse touristique de l’Afrique de l’Ouest : <br>Les 300 km de littoral parsemé des Archipels des Îles de Loos, d’Alcatraz, <br> de Tristao et de M’Botini ; couvert de mangroves, s’ouvre à la mer par de merveilleuses plages de sables fins <br> et de coquillages, ainsi que par des immenses estuaires de cours d’eaux. Ils confèrent une beauté singulière à la Basse Guinée.</p>
-            </article>
-           </div>
-            </main>
+        <section class="about-section">
+        <h1>À propos de Nimba Guinée</h1>
+        <div class="about-content">
+            <div class="about-text">
+                <p>
+                    <strong>Nimba Guinée</strong> est une plateforme dédiée à la valorisation de la Guinée, de ses richesses naturelles, culturelles et humaines. 
+                    Fondée par des passionnés du pays, notre mission est de faire découvrir la Guinée authentique, de promouvoir ses destinations, ses talents et ses initiatives.
+                </p>
+                <p>
+                    Nous croyons en une Guinée ouverte, dynamique et fière de ses racines. À travers nos services, nos articles et nos actions, nous souhaitons inspirer, informer et connecter tous ceux qui aiment la Guinée ou souhaitent la découvrir.
+                </p>
+            </div>
+            <div class="about-img">
+                <img src="images/logoo.png" alt="Nimba Guinée">
+            </div>
+        </div>
+        <div class="about-values">
+            <div class="about-value">Passion & Authenticité</div>
+            <div class="about-value">Respect & Diversité</div>
+            <div class="about-value">Innovation & Partage</div>
+            <div class="about-value">Engagement & Excellence</div>
+        </div>
+        <div class="about-team">
+            <h2>Notre équipe</h2>
+            <div class="team-list">
+                <div class="team-member">Mansa Moussa</div>
+                <div class="team-member">Fodé Dounoh</div>
+                <div class="team-member">Naby Moussa</div>
+                <div class="team-member">Sidafa Doura</div>
+            </div>
+        </div>
+        <div class="about-contact">
+            <p>Envie d’en savoir plus ou de collaborer avec nous ?</p>
+            <a href="contact.html">Contactez-nous</a>
+        </div>
+    </section>
             <div class="destinatiion">
-                <h2>Destination</h2>
-                <!-- <ul>
-                    <li><a href="destination.html">Kérouané</a></li>
-                    <li><a href="destination.html">Macenta</a></li>
-                    <li><a href="destination.html">Kindia</a></li>
-                </ul> -->
-                <a href="#"><img src="images/27.jpg" alt="destination" style="height: 245px" ; width="315px"></a>
-                <a href="#"><img src="images/6.jpg" alt="destination" style="height: 245px" ; width="315px"></a>
-                <a href="#"><img src="images/13.jpg" alt="destination" style="height: 245px" ; width="315px"></a>
+                <a href="#"><img src="images/Naby Moussa.jpg" alt="PDG" style="height: 245px" ; width="315px"></a>
+                <a href="#"><img src="images/sira.jpg" alt="DG" style="height: 245px" ; width="315px"></a>
+                <a href="#"><img src="images/equipe.jpg" alt="équipe" style="height: 245px" ; width="315px"></a>
             </div> <br><br><br>
             </div>
         </div>
@@ -100,7 +105,7 @@
         </main>
     <footer class="footer">
         <div>
-            <a href="index.html"><img src="images/logo.jpg" alt="logo" style="height: 65px" ; width="115px"></a>
+            <a href="index.html"><img src="images/logoo.png" alt="logo" style="height: 65px" ; width="115px"></a>
             <h1>nimba guinée</h1><br>
             <p>La Guinée c'est chez nous</p>
         </div>
@@ -108,7 +113,8 @@
             <h2 class="footer-titre">Contact</h2>
             <ul>
                 <li>Tel:</li>
-                <li>224 11 11 11</li>
+                <li>+224 620 33 49 38</li>
+                <li>+224 666 42 57 59</li>
             </ul>
         </div>
         <div>
