--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <header class="header">
-            <a href="index.html"><img src="images/logo.jpg" alt="logo" style="height: 65px" ; width="115px"></a>
+            <a href="index.html"><img src="images/logoo.png" alt="logo" style="height: 65px" ; width="115px"></a>
              
            <nav>
     <ul class="menu">
@@ -25,17 +25,17 @@
         <li class="dropdown">
             <a href="apropos.html">A propos</a>
             <ul class="submenu">
-                <li><a href="#">Membre 1</a></li>
-                <li><a href="#">Membre 2</a></li>
-                <li><a href="#">Membre 3</a></li>
+                <li><a href="#">PDG</a></li>
+                <li><a href="#">DG</a></li>
+                <li><a href="#">L'équipe</a></li>
             </ul>
         </li>
         <li class="dropdown">
             <a href="services.html">Services</a>
             <ul class="submenu">
-                <li><a href="#">Service 1</a></li>
-                <li><a href="#">Service 2</a></li>
-                <li><a href="#">Service 3</a></li>
+                <li><a href="#">Santé</a></li>
+                <li><a href="#">Sécurité</a></li>
+                <li><a href="#">Assurances</a></li>
             </ul>
         </li>
          <li class="dropdown">
@@ -43,11 +43,21 @@
             <ul class="submenu">
                 <li><a href="#">+224 11 11</a></li>
                 <li><a href="#">+223 22 22</a></li>
-                <li><a href="#">+221 33 33 33</a></li>
+                <li><a href="#">+221 33 33</a></li>
             </ul>
         </li>
     </ul>
+    <form class="search-bar" action="#" method="get">
+        <input type="text" name="q" placeholder="Rechercher...">
+        <button type="submit">🔍</button>
+    </form>
+    <select class="lang-switcher">
+    <option value="fr">Fr</option>
+    <option value="en">En</option>
+    <option value="es">Es</option>
+</select>
 </nav>
+
         </header>
        
     </div>
@@ -84,7 +94,7 @@
     </div>
     <footer class="footer">
         <div>
-            <a href="index.html"><img src="images/logo.jpg" alt="logo" style="height: 65px" ; width="115px"></a>
+            <a href="index.html"><img src="images/logoo.png" alt="logo" style="height: 65px" ; width="115px"></a>
             <h1>nimba guinée</h1><br>
             <p>La Guinée c'est chez nous</p>
         </div>
@@ -92,7 +102,8 @@
             <h2 class="footer-titre">Contact</h2>
             <ul>
                 <li>Tel:</li>
-                <li>224 11 11 11</li>
+                <li>+224 620 33 49 38</li>
+                <li>+224 666 42 57 59</li>
             </ul>
         </div>
         <div>
