--- a/destination.html
+++ b/destination.html
@@ -9,16 +9,7 @@
 <body>
     <div>
         <header class="header">
-            <a href="index.html"><img src="images/logo.jpg" alt="logo" style="height: 65px" ; width="115px"></a>
-             
-            <!-- <nav>
-                <ul>
-                    <li><a href="contact.html">contact</a></li>
-                    <li><a href="apropos.html">a propos</a></li>
-                    <li><a href="services.html">services</a></li>
-                    <li><a href="destination.html">Destination</a></li>
-                </ul>
-            </nav> -->
+            <a href="index.html"><img src="images/logoo.png" alt="logo" style="height: 65px" ; width="115px"></a>
            <nav>
                 <ul class="menu">
          <li class="dropdown">
@@ -33,17 +24,17 @@
         <li class="dropdown">
             <a href="apropos.html">A propos</a>
             <ul class="submenu">
-                <li><a href="#">Membre 1</a></li>
-                <li><a href="#">Membre 2</a></li>
-                <li><a href="#">Membre 3</a></li>
+                <li><a href="#">PDG</a></li>
+                <li><a href="#">DG</a></li>
+                <li><a href="#">L'équipe</a></li>
             </ul>
         </li>
         <li class="dropdown">
             <a href="services.html">Services</a>
             <ul class="submenu">
-                <li><a href="#">Service 1</a></li>
-                <li><a href="#">Service 2</a></li>
-                <li><a href="#">Service 3</a></li>
+                <li><a href="#">Santé</a></li>
+                <li><a href="#">Sécurité</a></li>
+                <li><a href="#">Assurances</a></li>
             </ul>
         </li>
          <li class="dropdown">
@@ -51,73 +42,86 @@
             <ul class="submenu">
                 <li><a href="#">+224 11 11</a></li>
                 <li><a href="#">+223 22 22</a></li>
-                <li><a href="#">+221 33 33 33</a></li>
+                <li><a href="#">+221 33 33</a></li>
             </ul>
         </li>
     </ul>
+    <form class="search-bar" action="#" method="get">
+        <input type="text" name="q" placeholder="Rechercher...">
+        <button type="submit">🔍</button>
+    </form>
+    <select class="lang-switcher">
+    <option value="fr">Fr</option>
+    <option value="en">En</option>
+    <option value="es">Es</option>
+</select>
            </nav>
         </header>
-        <!-- <section class="slider">
-            <div class="slides">
-                <img src="images/3.jpg" alt="images-1">
-                <img src="images/4.jpg" alt="images-2">
-                <img src="images/5.jpg" alt="">
-            </div>
-        </section> -->
+
     </div>
-        <main>
-            <div>
-                <div>
-            <div>
-                <main class="main">
-           <div class="arcticle">
-            <article>
-                <img src="images/drapeau.jpg" alt="profil" style="height: 75px" ; width="125px" ; border-radius="25px">
-                <h2>Les chemins de la guinée</h2>
-                <p>Situé à l’extrême Ouest de l’Afrique, la République de Guinée s’étend sur une superficie de 245 857 km2. Son territoire est limité par l’Océan Atlantique à l’ouest,<br> la Guinée Bissau au nord-ouest, le Sénégal et le Mali au nord, la Côte d’Ivoire à l’est, le Libéria et la Sierra Léone au sud. Nature, culture,<br> diversité et philosophies authentiques fondent la Guinée. Quatre (4) mondes y sont réunis, <br>à travers ses quatre (4) régions naturelles ; auxquelles correspondent des types de reliefs, de climats, de faunes et de flores bien distincts. <br> Elle apparaît comme une synthèse touristique de l’Afrique de l’Ouest : <br>Les 300 km de littoral parsemé des Archipels des Îles de Loos, d’Alcatraz, <br> de Tristao et de M’Botini ; couvert de mangroves, s’ouvre à la mer par de merveilleuses plages de sables fins <br> et de coquillages, ainsi que par des immenses estuaires de cours d’eaux. Ils confèrent une beauté singulière à la Basse Guinée.</p>
-            </article>
-           </div>
-           <div class="arcticle">
-            <article>
-                  <img src="images/3.jpg" alt="profil" style="height: 75px" ; width="125px" ; border-radius="25px">
-                <h2>Les chemins de la guinée</h2>
-                <p>Situé à l’extrême Ouest de l’Afrique, la République de Guinée s’étend sur une superficie de 245 857 km2. Son territoire est limité par l’Océan Atlantique à l’ouest,<br> la Guinée Bissau au nord-ouest, le Sénégal et le Mali au nord, la Côte d’Ivoire à l’est, le Libéria et la Sierra Léone au sud. Nature, culture,<br> diversité et philosophies authentiques fondent la Guinée. Quatre (4) mondes y sont réunis, <br>à travers ses quatre (4) régions naturelles ; auxquelles correspondent des types de reliefs, de climats, de faunes et de flores bien distincts. <br> Elle apparaît comme une synthèse touristique de l’Afrique de l’Ouest : <br>Les 300 km de littoral parsemé des Archipels des Îles de Loos, d’Alcatraz, <br> de Tristao et de M’Botini ; couvert de mangroves, s’ouvre à la mer par de merveilleuses plages de sables fins <br> et de coquillages, ainsi que par des immenses estuaires de cours d’eaux. Ils confèrent une beauté singulière à la Basse Guinée.</p>
-            </article>
-           </div>
-           <div class="arcticle">
-            <article>
-                   <img src="images/2.jpg" alt="profil" style="height: 75px" ; width="125px" ; border-radius="25px">
-                <h2>Les chemins de la guinée</h2>
-                <p>Situé à l’extrême Ouest de l’Afrique, la République de Guinée s’étend sur une superficie de 245 857 km2. Son territoire est limité par l’Océan Atlantique à l’ouest,<br> la Guinée Bissau au nord-ouest, le Sénégal et le Mali au nord, la Côte d’Ivoire à l’est, le Libéria et la Sierra Léone au sud. Nature, culture,<br> diversité et philosophies authentiques fondent la Guinée. Quatre (4) mondes y sont réunis, <br>à travers ses quatre (4) régions naturelles ; auxquelles correspondent des types de reliefs, de climats, de faunes et de flores bien distincts. <br> Elle apparaît comme une synthèse touristique de l’Afrique de l’Ouest : <br>Les 300 km de littoral parsemé des Archipels des Îles de Loos, d’Alcatraz, <br> de Tristao et de M’Botini ; couvert de mangroves, s’ouvre à la mer par de merveilleuses plages de sables fins <br> et de coquillages, ainsi que par des immenses estuaires de cours d’eaux. Ils confèrent une beauté singulière à la Basse Guinée.</p>
-            </article>
-           </div>
-            </main>
-            <div class="destinatiion">
-                <h2>Destination</h2>
-                <!-- <ul>
-                    <li><a href="destination.html">Kérouané</a></li>
-                    <li><a href="destination.html">Macenta</a></li>
-                    <li><a href="destination.html">Kindia</a></li>
-                </ul> -->
-                <a href="#"><img src="images/27.jpg" alt="destination" style="height: 245px" ; width="315px"></a>
-                <a href="#"><img src="images/6.jpg" alt="destination" style="height: 245px" ; width="315px"></a>
-                <a href="#"><img src="images/13.jpg" alt="destination" style="height: 245px" ; width="315px"></a>
-            </div> <br><br><br>
+        <section class="dest-page-section">
+        <h1>Nos Destinations</h1>
+        <div class="dest-grid">
+            <div class="dest-card">
+                <img src="images/27.jpg" alt="Kankan">
+                <h2>Kankan</h2>
+                <p>La plus grande région de Guinée, réputée pour son histoire, ses marchés animés et ses paysages de savane.</p>
+                <a href="#">Découvrir</a>
+            </div>
+            <div class="dest-card">
+                <img src="images/6.jpg" alt="Mandiana">
+                <h2>Mandiana</h2>
+                <p>Terre d’or et de traditions, Mandiana séduit par ses villages authentiques et ses fêtes culturelles.</p>
+                <a href="#">Découvrir</a>
+            </div>
+            <div class="dest-card">
+                <img src="images/13.jpg" alt="Yomou">
+                <h2>Yomou</h2>
+                <p>Au cœur de la Guinée forestière, Yomou offre une nature luxuriante et une grande diversité ethnique.</p>
+                <a href="#">Découvrir</a>
+            </div>
+            <div class="dest-card">
+                <img src="images/arbre.avif" alt="Boké">
+                <h2>Boké</h2>
+                <p>Région côtière, Boké est connue pour ses plages, ses mangroves et son patrimoine colonial.</p>
+                <a href="#">Découvrir</a>
+            </div>
+            <div class="dest-card">
+                <img src="images/soleil.jpg" alt="Pita">
+                <h2>Pita</h2>
+                <p>Au cœur du Fouta Djalon, Pita est célèbre pour ses cascades et ses paysages montagneux.</p>
+                <a href="#">Découvrir</a>
+            </div>
+            <div class="dest-card">
+                <img src="images/11.webp" alt="Banankoro">
+                <h2>Banankoro</h2>
+                <p>Petite ville dynamique, Banankoro est un carrefour commercial et culturel de la région.</p>
+                <a href="#">Découvrir</a>
+            </div>
+            <div class="dest-card">
+                <img src="images/21.jpg" alt="Kouroussa">
+                <h2>Kouroussa</h2>
+                <p>Ville historique sur le fleuve Niger, Kouroussa est réputée pour ses traditions et son artisanat.</p>
+                <a href="#">Découvrir</a>
+            </div>
+        </div>
+    </section>
             </div>
         </div>
             </div>
         </main>
     <footer class="footer">
         <div>
-            <a href="index.html"><img src="images/logo.jpg" alt="logo" style="height: 65px" ; width="115px"></a>
+            <a href="index.html"><img src="images/logoo.png" alt="logo" style="height: 65px" ; width="115px"></a>
             <h1>nimba guinée</h1><br>
             <p>La Guinée c'est chez nous</p>
         </div>
         <div>
             <h2 class="footer-titre">Contact</h2>
             <ul>
-                <li>Tel:</li>
-                <li>224 11 11 11</li>
+               <li>Tel:</li>
+                <li>+224 620 33 49 38</li>
+                <li>+224 666 42 57 59</li>
             </ul>
         </div>
         <div>
@@ -127,6 +131,7 @@
             <li>Fodé Dounoh</li>
             <li>Naby Moussa </li>
             <li>Sidafa Doura</li>
+            <li>Chatgpt</li>
         </ul>
         </div>
         <div>
