--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header class="header">
-        <a href="index.html"><img src="images/logo.jpg" alt="Logo Nimba Guinée" style="height: 65px; width: 115px;"></a>
+        <a href="index.html"><img src="images/logoo.png" alt="Logo Nimba Guinée" style="height: 65px; width: 115px;"></a>
         <nav>
-    <ul class="menu">
+        <ul class="menu">
          <li class="dropdown">
             <a href="destination.html">Destinations</a>
             <ul class="submenu">
@@ -23,17 +23,17 @@
         <li class="dropdown">
             <a href="apropos.html">A propos</a>
             <ul class="submenu">
-                <li><a href="#">Membre 1</a></li>
-                <li><a href="#">Membre 2</a></li>
-                <li><a href="#">Membre 3</a></li>
+                <li><a href="#">PDG</a></li>
+                <li><a href="#">DG</a></li>
+                <li><a href="#">L'équipe</a></li>
             </ul>
         </li>
         <li class="dropdown">
             <a href="services.html">Services</a>
             <ul class="submenu">
-                <li><a href="#">Service 1</a></li>
-                <li><a href="#">Service 2</a></li>
-                <li><a href="#">Service 3</a></li>
+                <li><a href="#">Santé</a></li>
+                <li><a href="#">Sécurité</a></li>
+                <li><a href="#">Assurances</a></li>
             </ul>
         </li>
          <li class="dropdown">
@@ -45,9 +45,35 @@
             </ul>
         </li>
     </ul>
+    <form class="search-bar" action="#" method="get">
+        <input type="text" name="q" placeholder="Rechercher...">
+        <button type="submit">🔍</button>
+    </form>
+    <select class="lang-switcher">
+    <option value="fr">Fr</option>
+    <option value="en">En</option>
+    <option value="es">Es</option>
+</select>
 </nav>
     </header>
-
+    <div class=" img">
+        <p>#Paradis</p>
+    </div>
+     <div class="guinea">
+        <div>
+            <div>
+        <h2>La Guinée, le cœur vibrant de l’Afrique de l’Ouest</h2>
+        <p>
+            Nichée sur la côte atlantique de l’Afrique de l’Ouest, la Guinée est un pays riche en ressources, en culture et en diversité. <br> De ses plages dorées aux forêts tropicales profondes, en passant par les hautes terres du Fouta Djalon, <br> la Guinée offre un paysage d’une beauté saisissante et d’une grande variété. <br>
+            Berceau de traditions ancestrales et de rythmes envoutants, la Guinée est aussi la terre de Sekou Touré, <br> figure historique de l’indépendance africaine. Elle est le foyer d’une mosaïque de peuples <br> – Malinkés, Peuls, Soussous, et bien d'autres – dont les cultures se croisent et s'enrichissent mutuellement. <br> La musique y tient une place essentielle, avec des instruments emblématiques comme le balafon, la kora et le djembé, qui font vibrer les cœurs bien au-delà de ses frontières. <br>
+            Pays de l’hospitalité et de la chaleur humaine, la Guinée séduit par l’authenticité de ses traditions, la richesse de ses terres et la force de son peuple. C’est une nation jeune, fière et pleine de potentiel, tournée vers l’avenir tout en étant profondément attachée à son histoire.
+            La Guinée n’est pas seulement un pays : c’est une identité, une énergie, un espoir. <br> Une invitation à découvrir l’Afrique vraie, celle qui respire par ses peuples, ses couleurs, <br> ses sons et ses sourires.</p>
+     </div>
+     <div>
+        <img src="images/guinea-removebg-preview.png" alt="" style="width: 725px;" height="855px;">
+     </div>
+        </div>
+     </div>
     <main class="main">
         <section class="hero">
             <h1>Bienvenue sur Nimba Guinée</h1>
@@ -66,26 +92,29 @@
                 <p>Nature, culture, diversité et philosophies authentiques fondent la Guinée. Quatre mondes y sont réunis... (texte résumé)</p>
             </article>
         </section>
-
-        <section class="destination">
-            <h2>Destinations</h2>
-            <div class="destinations-list">
-                <div class="dest">
-                    <a href="#"><img src="images/27.jpg" alt="Destination 1"></a>
-                </div>
-                <div class="dest">
-                    <a href="#"><img src="images/6.jpg" alt="Destination 2"></a>
-                </div>
-                <div class="dest">
-                    <a href="#"><img src="images/13.jpg" alt="Destination 3"></a>
-                </div>
-            </div>
-        </section>
+        <section class="actus">
+  <h2>À la une</h2>
+  <div class="actus-list">
+    <article>
+      <h3>Festival des Arts de Conakry</h3>
+      <p>Venez découvrir la richesse culturelle de la Guinée lors du festival annuel…</p>
+      <a href="#">Lire plus</a>
+    </article>
+    <!-- Ajoute d'autres articles -->
+  </div>
+</section>
+<section class="temoignages">
+  <h2>Ils parlent de nous</h2>
+  <blockquote>
+    “Un site incontournable pour découvrir la Guinée !”<br>
+    <span>- Fatoumata D.</span>
+  </blockquote>
+</section>
     </main>
 
     <footer class="footer">
         <div>
-            <a href="index.html"><img src="images/logo.jpg" alt="logo" style="height: 65px; width: 115px;"></a>
+            <a href="index.html"><img src="images/logoo.png" alt="logo" style="height: 65px; width: 115px;"></a>
             <h1>nimba guinée</h1>
             <p>La Guinée c'est chez nous</p>
         </div>
@@ -93,7 +122,8 @@
             <h2 class="footer-titre">Contact</h2>
             <ul>
                 <li>Tel:</li>
-                <li>224 11 11 11</li>
+                <li>+224 620 33 49 38</li>
+                <li>+224 666 42 57 59</li>
             </ul>
         </div>
         <div>
