--- a/services.html
+++ b/services.html
@@ -9,19 +9,10 @@
 <body>
     <div>
         <header class="header">
-            <a href="index.html"><img src="images/logo.jpg" alt="logo" style="height: 65px" ; width="115px"></a>
-             
-            <!-- <nav>
-                <ul>
-                    <li><a href="contact.html">contact</a></li>
-                    <li><a href="apropos.html">a propos</a></li>
-                    <li><a href="services.html">services</a></li>
-                    <li><a href="destination.html">Destination</a></li>
-                </ul>
-            </nav> -->
+            <a href="index.html"><img src="images/logoo.png" alt="logo" style="height: 65px" ; width="115px"></a>
             <nav>
-    <ul class="menu">
-         <li class="dropdown">
+            <ul class="menu">
+             <li class="dropdown">
             <a href="destination.html">Destinations</a>
             <ul class="submenu">
                 <li><a href="#">Conakry</a></li>
@@ -33,17 +24,17 @@
         <li class="dropdown">
             <a href="apropos.html">A propos</a>
             <ul class="submenu">
-                <li><a href="#">Membre 1</a></li>
-                <li><a href="#">Membre 2</a></li>
-                <li><a href="#">Membre 3</a></li>
+                <li><a href="#">PDG</a></li>
+                <li><a href="#">DG</a></li>
+                <li><a href="#">L'équipe</a></li>
             </ul>
         </li>
         <li class="dropdown">
             <a href="services.html">Services</a>
             <ul class="submenu">
-                <li><a href="#">Service 1</a></li>
-                <li><a href="#">Service 2</a></li>
-                <li><a href="#">Service 3</a></li>
+                <li><a href="#">Santé</a></li>
+                <li><a href="#">Sécurité</a></li>
+                <li><a href="#">Assurances</a></li>
             </ul>
         </li>
          <li class="dropdown">
@@ -51,10 +42,19 @@
             <ul class="submenu">
                 <li><a href="#">+224 11 11</a></li>
                 <li><a href="#">+223 22 22</a></li>
-                <li><a href="#">+221 33 33 33</a></li>
+                <li><a href="#">+221 33 33</a></li>
             </ul>
         </li>
     </ul>
+    <form class="search-bar" action="#" method="get">
+        <input type="text" name="q" placeholder="Rechercher...">
+        <button type="submit">🔍</button>
+    </form>
+    <select class="lang-switcher">
+    <option value="fr">Fr</option>
+    <option value="en">En</option>
+    <option value="es">Es</option>
+</select>
 </nav>
         </header>
         <!-- <section class="slider">
@@ -64,52 +64,69 @@
                 <img src="images/5.jpg" alt="">
             </div>
         </section> -->
-    </div>
-        <main>
-            <div>
-                <div>
-            <div>
-                <main class="main">
-           <div class="arcticle">
-            <article>
-                <img src="images/drapeau.jpg" alt="profil" style="height: 75px" ; width="125px" ; border-radius="25px">
-                <h2>Les chemins de la guinée</h2>
-                <p>Situé à l’extrême Ouest de l’Afrique, la République de Guinée s’étend sur une superficie de 245 857 km2. Son territoire est limité par l’Océan Atlantique à l’ouest,<br> la Guinée Bissau au nord-ouest, le Sénégal et le Mali au nord, la Côte d’Ivoire à l’est, le Libéria et la Sierra Léone au sud. Nature, culture,<br> diversité et philosophies authentiques fondent la Guinée. Quatre (4) mondes y sont réunis, <br>à travers ses quatre (4) régions naturelles ; auxquelles correspondent des types de reliefs, de climats, de faunes et de flores bien distincts. <br> Elle apparaît comme une synthèse touristique de l’Afrique de l’Ouest : <br>Les 300 km de littoral parsemé des Archipels des Îles de Loos, d’Alcatraz, <br> de Tristao et de M’Botini ; couvert de mangroves, s’ouvre à la mer par de merveilleuses plages de sables fins <br> et de coquillages, ainsi que par des immenses estuaires de cours d’eaux. Ils confèrent une beauté singulière à la Basse Guinée.</p>
-            </article>
-           </div>
-           <div class="arcticle">
-            <article>
-                  <img src="images/3.jpg" alt="profil" style="height: 75px" ; width="125px" ; border-radius="25px">
-                <h2>Les chemins de la guinée</h2>
-                <p>Situé à l’extrême Ouest de l’Afrique, la République de Guinée s’étend sur une superficie de 245 857 km2. Son territoire est limité par l’Océan Atlantique à l’ouest,<br> la Guinée Bissau au nord-ouest, le Sénégal et le Mali au nord, la Côte d’Ivoire à l’est, le Libéria et la Sierra Léone au sud. Nature, culture,<br> diversité et philosophies authentiques fondent la Guinée. Quatre (4) mondes y sont réunis, <br>à travers ses quatre (4) régions naturelles ; auxquelles correspondent des types de reliefs, de climats, de faunes et de flores bien distincts. <br> Elle apparaît comme une synthèse touristique de l’Afrique de l’Ouest : <br>Les 300 km de littoral parsemé des Archipels des Îles de Loos, d’Alcatraz, <br> de Tristao et de M’Botini ; couvert de mangroves, s’ouvre à la mer par de merveilleuses plages de sables fins <br> et de coquillages, ainsi que par des immenses estuaires de cours d’eaux. Ils confèrent une beauté singulière à la Basse Guinée.</p>
-            </article>
-           </div>
-           <div class="arcticle">
-            <article>
-                   <img src="images/2.jpg" alt="profil" style="height: 75px" ; width="125px" ; border-radius="25px">
-                <h2>Les chemins de la guinée</h2>
-                <p>Situé à l’extrême Ouest de l’Afrique, la République de Guinée s’étend sur une superficie de 245 857 km2. Son territoire est limité par l’Océan Atlantique à l’ouest,<br> la Guinée Bissau au nord-ouest, le Sénégal et le Mali au nord, la Côte d’Ivoire à l’est, le Libéria et la Sierra Léone au sud. Nature, culture,<br> diversité et philosophies authentiques fondent la Guinée. Quatre (4) mondes y sont réunis, <br>à travers ses quatre (4) régions naturelles ; auxquelles correspondent des types de reliefs, de climats, de faunes et de flores bien distincts. <br> Elle apparaît comme une synthèse touristique de l’Afrique de l’Ouest : <br>Les 300 km de littoral parsemé des Archipels des Îles de Loos, d’Alcatraz, <br> de Tristao et de M’Botini ; couvert de mangroves, s’ouvre à la mer par de merveilleuses plages de sables fins <br> et de coquillages, ainsi que par des immenses estuaires de cours d’eaux. Ils confèrent une beauté singulière à la Basse Guinée.</p>
-            </article>
-           </div>
-            </main>
-            <div class="destinatiion">
-                <h2>Destination</h2>
-                <!-- <ul>
-                    <li><a href="destination.html">Kérouané</a></li>
-                    <li><a href="destination.html">Macenta</a></li>
-                    <li><a href="destination.html">Kindia</a></li>
-                </ul> -->
-                <a href="#"><img src="images/27.jpg" alt="destination" style="height: 245px" ; width="315px"></a>
-                <a href="#"><img src="images/6.jpg" alt="destination" style="height: 245px" ; width="315px"></a>
-                <a href="#"><img src="images/13.jpg" alt="destination" style="height: 245px" ; width="315px"></a>
-            </div> <br><br><br>
+        <section class="services-section">
+        <h1>Nos Services</h1>
+        <div class="services-list">
+            <div class="service-card">
+                <img src="images/docta.avif" alt="Santé">
+                <h2>Santé</h2>
+                <p>
+                    Un réseau national de centres de santé modernes, accessibles et équipés pour votre bien-être. Prévention, soins, maternité, pédiatrie et accompagnement personnalisé.
+                </p>
+                <a href="#">En savoir plus</a>
+            </div>
+            <div class="service-card">
+                <img src="images/secu.avif" alt="Sécurité">
+                <h2>Sécurité</h2>
+                <p>
+                    Protection 24h/24 de vos biens, proches et activités. Agents formés, équipements modernes, audits gratuits et solutions sur mesure pour votre tranquillité.
+                </p>
+                <a href="#">En savoir plus</a>
+            </div>
+            <div class="service-card">
+                <img src="images/assurance.avif" alt="Assurances">
+                <h2>Assurances</h2>
+                <p>
+                    Protégez votre santé, votre famille, vos biens et votre avenir avec nos formules flexibles et un accompagnement de confiance, partout en Guinée.
+                </p>
+                <a href="#">En savoir plus</a>
+            </div>
+             <div class="service-card">
+                <img src="images/agric.jpg" alt="Santé">
+                <h2>agriculture</h2>
+                <p>
+                   L’agriculture en Guinée : un potentiel immense, des défis à relever
+                    L’agriculture occupe une place centrale dans l’économie guinéenne. Environ 70 % de la population
+                     active vit directement ou indirectement de l’agriculture, ce qui en fait un pilier essentiel du développement national.
+                     Grâce à un climat favorable, des terres fertiles et une diversité écologique remarquable, la Guinée dispose d’un immense potentiel agricole. </p>
+                <a href="#">En savoir plus</a>
+            </div>
+             <div class="service-card">
+                <img src="images/sport.jpg" alt="Santé">
+                <h2>sport</h2>
+                <p>Le sport en Guinée : passion populaire et vecteur d’unité nationale
+                    Le sport occupe une place importante dans la vie des Guinéens. Au-delà de l’aspect physique et récréatif, 
+                    il est un véritable facteur d’unité nationale, de cohésion sociale et d’expression du talent de la jeunesse.
+                 Le sport le plus populaire en Guinée reste sans conteste le football, 
+                    pratiqué dans toutes les régions du pays, aussi bien dans les rues que dans les stades.</p>
+                <a href="#">En savoir plus</a>
+            </div>
+             <div class="service-card">
+                <img src="images/educ.jpg" alt="Santé">
+                <h2>Education</h2>
+                <p>
+                    L’éducation en Guinée : un enjeu clé pour l’avenir
+                    L’éducation est l’un des piliers fondamentaux du développement d’une nation,
+                   et la Guinée en est pleinement consciente. Depuis l’indépendance, le pays a fait de l'accès à l'éducation une priorité,
+                    avec la volonté de former une jeunesse capable de relever les défis économiques, sociaux et culturels. </p>
+                <a href="#">En savoir plus</a>
             </div>
         </div>
-            </div>
-        </main>
+    </section>
+    </div>
     <footer class="footer">
         <div>
-            <a href="index.html"><img src="images/logo.jpg" alt="logo" style="height: 65px" ; width="115px"></a>
+            <a href="index.html"><img src="images/logoo.png" alt="logo" style="height: 65px" ; width="115px"></a>
             <h1>nimba guinée</h1><br>
             <p>La Guinée c'est chez nous</p>
         </div>
@@ -117,7 +134,8 @@
             <h2 class="footer-titre">Contact</h2>
             <ul>
                 <li>Tel:</li>
-                <li>224 11 11 11</li>
+                <li>+224 620 33 49 38</li>
+                <li>+224 666 42 57 59</li>
             </ul>
         </div>
         <div>
